fix: notes text still doesnt wrap

--- a/www/new-ui/templates/display-entry.css
+++ b/www/new-ui/templates/display-entry.css
@@ -282,8 +282,7 @@
     }
 
     #notes {
-        text-wrap: wrap;
-        white-space: pre;
+        white-space: pre-wrap;
     }
 
     hgroup {
